04_services/owncloud/dev/ingressroute-patch-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: owncloud
spec:
  routes:
    - match: Host(`owncloud.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: owncloud
          port: 8080
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: owncloud-tls
spec:
  routes:
    - match: Host(`owncloud.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: owncloud
          port: 8080
